--- a/views/tmpl/admin/support/technician-profile.html
+++ b/views/tmpl/admin/support/technician-profile.html
@@ -22,49 +22,55 @@
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
-					<div class="noback bg-blue">						
-						<div class="row">
-							<div class="col-xs-5 ta-c">
-								<i class="fa fa-key fa-5x"></i>
-							</div>
-							<div class="col-xs-7">								
-								<p class="text-elg text-strong mt-5 mb-5">4</p>
-								<span class="text-lg">Access Keys</span>
+					<a ui-sref="app.admin.device.devices">
+						<div class="noback bg-blue">						
+							<div class="row">
+								<div class="col-xs-4 ta-c">
+									<i class="fa fa-fax fa-5x"></i>
+								</div>
+								<div class="col-xs-8">								
+									<p class="text-elg text-strong mt-5 mb-5">15</p>
+									<span class="text-lg">Primary Devices</span>
+								</div>
 							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">					
-					<div class="noback bg-greensea">
-						<div class="row">
-							<div class="col-xs-5 ta-c">
-								<i class="fa fa-users fa-5x"></i>
-							</div>
-							<div class="col-xs-7">								
-								<p class="text-elg text-strong mt-5 mb-5">3</p>
-								<span class="text-lg">User Groups</span>
+					<a ui-sref="app.admin.device.dependent-devices">
+						<div class="noback bg-greensea">
+							<div class="row">
+								<div class="col-xs-4 ta-c">
+									<i class="fa fa-mobile fa-5x"></i>
+								</div>
+								<div class="col-xs-8">								
+									<p class="text-elg text-strong mt-5 mb-5">7</p>
+									<span class="text-lg">Dependent Devices</span>
+								</div>
 							</div>
 						</div>
-					</div>					
+					</a>
 				</div>
 			</div>
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">					
-					<div class="noback bg-lightred">						
-						<div class="row">
-							<div class="col-xs-5 ta-c">
-								<i class="fa fa-calendar fa-5x"></i>
-							</div>
-							<div class="col-xs-7">								
-								<p class="text-elg text-strong mt-5 mb-5">3</p>
-								<span class="text-lg">Schedule Groups</span>
+				<div class="card">
+					<a ui-sref="app.admin.user.users">
+						<div class="noback bg-lightred">						
+							<div class="row">
+								<div class="col-xs-4 ta-c">
+									<i class="fa fa-users fa-5x"></i>
+								</div>
+								<div class="col-xs-8">								
+									<p class="text-elg text-strong mt-5 mb-5">95</p>
+									<span class="text-lg">Users</span>
+								</div>
 							</div>
 						</div>
-					</div>					
+					</a>
 				</div>
 			</div>			
 		</div>
@@ -77,10 +83,11 @@
 							<img class="img-circle" src="images/users/2.jpg" alt="">
 						</div>
 						<h4 class="mb-0"><strong>Arnold</strong></h4>
+						<span class="text-muted">24X7 Support Services</span>
 						<span class="text-muted">+1 212 1467 8920</span>
 						<div class="mt-40">
 							<button class="btn btn-rounded-20 btn-sm btn-greensea">Send Message</button>
-							<button class="btn btn-rounded-20 btn-sm btn-lightred">Delete User</button>
+							<button class="btn btn-rounded-20 btn-sm btn-lightred">Delete technician</button>
 						</div>
 
 					</div> 
@@ -126,24 +133,14 @@
 											</div>
 										</div>
 										
-										<div class="row profiledetail">
-											<div class="form-group col-md-6">
-												<p><label>Facility</label> USA Corporate Services</p>
-											</div>
-											<div class="form-group col-md-6">
-												<p><label>Device</label> Reception Room</p>
-											</div>
-										</div>
-										
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
 												<p><label>Name</label> Arnold</p>
-												<p><label>Phone</label> +1 212 1467 8920</p>
+												<p><label>Company Name</label> 24X7 Support Services</p>
 												<p><label>E-mail</label> arnold@gmail.com</p>
+												<p><label>Phone</label> +1 212 1467 8920</p>
 												<p><label>Address</label> 558 Margaret Street, LOS ANGELES, CA-90001, USA</p> 
-												<p><label>Country</label> USA</p>
-												<p><label>Status</label> Active</p>
-												<p><label>Expiration Date</label> 15/06/2017</p>
+												<p><label>Zip Code</label> 90001</p>
 											</div>											
 										</div>
 										
@@ -183,76 +180,6 @@
 													</div>
 												</div>
 											</div>											
-										</div>
-										
-										<div class="row">
-											<div class="form-group col-md-12 legend">
-												<h4><strong>User</strong> Groups</h4>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="form-group col-md-12">													
-												<div class="tile-body p-0">
-													<table class="table table-bordered">
-														<thead>
-															<tr>
-																<th>Group Name</th>
-																<th>Facility</th>
-															</tr>
-														</thead>
-														<tbody>
-															<tr>
-																<td>24x7</td>
-																<td>USA Corporate Services</td>
-															</tr>
-															<tr>
-																<td>Office Hrs</td>
-																<td>Aerzen USA Corporation</td>
-															</tr>
-															<tr>
-																<td>Housekeeping Hrs</td>
-																<td>USA Corporate Services</td>
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</div>
-										</div>
-										
-										<div class="row mt-40">
-											<div class="form-group col-md-12 legend">
-												<h4><strong>Schedule</strong> Groups</h4>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="form-group col-md-12">													
-												<div class="tile-body p-0">
-													<table class="table table-bordered">
-														<thead>
-															<tr>
-																<th>Schedule Name</th>
-																<th>Facility</th>
-															</tr>
-														</thead>
-														<tbody>
-															<tr>
-																<td>Office Schedule</td>
-																<td>USA Corporate Services</td>
-															</tr>
-															<tr>
-																<td>Cleaning Schedule</td>
-																<td>Aerzen USA Corporation</td>
-															</tr>
-															<tr>
-																<td>Meeting Schedule</td>
-																<td>USA Corporate Services</td>
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</div>
 										</div>										
 									</div>
 								</div>
@@ -270,7 +197,7 @@
 										<div class="row">
 											<div class="form-group col-sm-6">
 												<label for="first-name">First Name</label>
-												<input type="text" class="form-control" id="first-name" value="Paracosm">
+												<input type="text" class="form-control" id="first-name" value="Arnold">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="last-name">Last Name</label>
@@ -280,8 +207,8 @@
 										
 										<div class="row">										
 											<div class="form-group col-sm-6">
-												<label for="email">E-mail</label>
-												<input type="email" class="form-control" id="email" value="pcosm1245@gmail.com" readonly>
+												<label for="email">Company Name</label>
+												<input type="text" class="form-control" id="email" value="24X7 Support Services">
 											</div>
 											<div class="form-group col-sm-6 editprofile">
 												<label for="profile">Profile Photo</label>
@@ -294,41 +221,30 @@
 										
 										<div class="row">
 											<div class="form-group col-sm-6">
+												<label for="email">Email Address</label>
+												<input type="email" class="form-control" id="email" value="arnold@gmail.com" readonly>
+											</div>
+											<div class="form-group col-sm-6">
+												<label for="address1">Phone Number</label>
+												<input type="tel" class="form-control" id="address1" value="212 1467 8920">
+											</div>									
+										</div>
+										
+										<div class="row">
+											<div class="form-group col-sm-6">
 												<label for="address1">Address</label>
 												<input type="text" class="form-control" id="address1" value="558 Margaret Street, LOS ANGELES, CA-90001, USA">
+											</div>		
+											<div class="form-group col-sm-6">
+												<label for="email">Zip Code</label>
+												<input type="text" class="form-control" id="email" value="9001">
 											</div>
-											<div class="form-group col-sm-6">												
-												<label for="country">Country</label>
-												<select ui-jq="chosen" id="country" ui-options="{width: '100%'}">
-													<option>Slovakia</option>
-													<option>Czech Republic</option>
-													<option>Poland</option>
-													<option>Hungary</option>
-													<option>Austria</option>
-												</select>											  
-											</div>											
 										</div>
 										
 										<div class="row">
 											<div class="form-group col-sm-12">
 												<label for="bio">Description</label>
 												<textarea class="form-control" id="bio" style="height:125px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</textarea>
-											</div>
-										</div>
-										
-										<div class="row">										
-											<div class="form-group col-sm-6">
-												<label for="">Status</label><br/>
-												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
-												</div>
-											</div>
-											<div class="form-group col-sm-6 editprofile">
-												<label for="">Expiration Date</label>
-												<div class="form-group" ng-controller="DatepickerDemoCtrl">
-													<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
-												</div>
 											</div>
 										</div>
 										
@@ -456,116 +372,6 @@
 												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
 													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
 													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
-												</div>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="form-group col-md-12 legend">
-												<h4><strong><br/>User</strong> Groups</h4>												
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="col-md-12 legend">
-												<h5 class="pull-left"><strong>Assigned Groups</strong></h5>
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right"><i class="fa fa-plus"></i> <span>Add Groups</span></button>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="form-group col-md-12">													
-												<div class="tile-body p-0">
-													<table class="table table-bordered">
-														<thead>
-															<tr>
-																<th>Group Name</th>
-																<th>Facility</th>
-																<th>Action</th>
-															</tr>
-														</thead>
-														<tbody>
-															<tr>
-																<td>24x7</td>
-																<td>USA Corporate Services</td>
-																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
-															<tr>
-																<td>Office Hrs</td>
-																<td>Aerzen USA Corporation</td>
-																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
-															<tr>
-																<td>Housekeeping Hrs</td>
-																<td>USA Corporate Services</td>
-																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</div>
-										</div>
-										
-										<div class="row mt-20">
-											<div class="form-group col-md-12 legend">
-												<h4><strong><br/>Schedule</strong> Groups</h4>												
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="col-md-12 legend">
-												<h5 class="pull-left"><strong>Assigned Schedule Groups</strong></h5>
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right"><i class="fa fa-plus"></i> <span>Add Groups</span></button>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="form-group col-md-12">													
-												<div class="tile-body p-0">
-													<table class="table table-bordered">
-														<thead>
-															<tr>
-																<th>Schedule Name</th>
-																<th>Facility</th>
-																<th>Action</th>
-															</tr>
-														</thead>
-														<tbody>
-															<tr>
-																<td>Office Schedule</td>
-																<td>USA Corporate Services</td>
-																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
-															<tr>
-																<td>Cleaning Schedule</td>
-																<td>Aerzen USA Corporation</td>
-																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
-															<tr>
-																<td>Meeting Schedule</td>
-																<td>USA Corporate Services</td>
-																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
-														</tbody>
-													</table>
 												</div>
 											</div>
 										</div>
