--- a/views/tmpl/admin/door/view-doors.html
+++ b/views/tmpl/admin/door/view-doors.html
@@ -91,10 +91,12 @@
 					<div class="tile-body text-center bg-blue p-0"> 
 						<ul class="list-inline tbox m-0">
 							<li class="tcol p-10">
-								<span class="text-transparent-white"><a ui-sref="app.superadmin.facility.facility-details">USA Corporate Services</a></span>
+								<h3 class="m-0 mb-5">Facility</h3>
+								<span class="text-transparent-white mt-15"><a ui-sref="app.admin.facility.facility-details">USA Corporate Services</a></span>
 							</li>
 							<li class="tcol bg-blue dker p-10">
-								<span class="text-transparent-white"><a ui-sref="app.superadmin.device.device-details">Elika-Doorbell</a></span>
+								<h3 class="m-0 mb-5">Device</h3>
+								<span class="text-transparent-white"><a ui-sref="app.admin.device.device-details">Elika-Doorbell</a></span>
 							</li>
 						</ul>
 					</div>					
@@ -127,9 +129,9 @@
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
 												<p><label>Name</label> Main Gate Front</p>
-												<p><label>Status</label> Active</p>
-												<p><label>Facility</label> USA Corporate Services</p>
 												<p><label>Device</label> Elika-Doorbell</p>
+												<p><label>Facility</label> USA Corporate Services</p>
+												<p><label>Status</label> Active</p>
 											</div>											
 										</div>
 										
