--- a/views/tmpl/admin/permissions/admin-profile.html
+++ b/views/tmpl/admin/permissions/admin-profile.html
@@ -22,15 +22,15 @@
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
-					<a ui-sref="app.admin.facility.facility">
-						<div class="noback bg-greensea">
+					<a ui-sref="app.admin.device.devices">
+						<div class="noback bg-blue">						
 							<div class="row">
 								<div class="col-xs-4 ta-c">
-									<i class="fa fa-map-marker fa-5x"></i>
+									<i class="fa fa-fax fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Facility</p>
-									<span class="text-lg">2</span>
+									<p class="text-elg text-strong mt-5 mb-5">15</p>
+									<span class="text-lg">Primary Devices</span>
 								</div>
 							</div>
 						</div>
@@ -39,16 +39,16 @@
 			</div>
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">
-					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
+				<div class="card">					
+					<a ui-sref="app.admin.device.dependent-devices">
+						<div class="noback bg-greensea">
 							<div class="row">
 								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+									<i class="fa fa-mobile fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Devices</p>
-									<span class="text-lg">35</span>
+									<p class="text-elg text-strong mt-5 mb-5">7</p>
+									<span class="text-lg">Dependent Devices</span>
 								</div>
 							</div>
 						</div>
@@ -65,8 +65,8 @@
 									<i class="fa fa-users fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Users</p>
-									<span class="text-lg">145</span>
+									<p class="text-elg text-strong mt-5 mb-5">95</p>
+									<span class="text-lg">Users</span>
 								</div>
 							</div>
 						</div>
@@ -93,12 +93,12 @@
 					<div class="tile-body text-center bg-blue p-0"> 
 						<ul class="list-inline tbox m-0">
 							<li class="tcol p-10">
-								<h2 class="m-0">4</h2>
-								<span class="text-transparent-white">Keys</span>
+								<h2 class="m-0">Role</h2>
+								<span class="text-transparent-white">Admin</span>
 							</li>
 							<li class="tcol bg-blue dker p-10">
-								<h2 class="m-0">2</h2>
-								<span class="text-transparent-white">Facility</span>
+								<h2 class="m-0">Access</h2>
+								<span class="text-transparent-white">Full Access</span>
 							</li>
 						</ul>
 					</div>  
@@ -131,11 +131,12 @@
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
 												<p><label>Name</label> Arnold</p>
-												<p><label>Roles</label> Admin</p>
 												<p><label>Email</label> arnold1234@gmail.com</p>
 												<p><label>Phone</label> +1 212 1467 1212</p>
 												<p><label>Address</label> 558 Margaret Street, LOS ANGELES, CA-90001, USA</p> 
 												<p><label>Zip Code</label> 90001</p>
+												<p><label>Roles</label> Admin</p>
+												<p><label>Access</label> Full Access</p>
 											</div>											
 										</div>
 										
