--- a/views/tmpl/admin/permissions/admin.html
+++ b/views/tmpl/admin/permissions/admin.html
@@ -22,15 +22,15 @@
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
-					<a ui-sref="app.admin.facility.facility">
-						<div class="noback bg-greensea">
+					<a ui-sref="app.admin.device.devices">
+						<div class="noback bg-blue">						
 							<div class="row">
 								<div class="col-xs-4 ta-c">
-									<i class="fa fa-map-marker fa-5x"></i>
+									<i class="fa fa-fax fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Facility</p>
-									<span class="text-lg">2</span>
+									<p class="text-elg text-strong mt-5 mb-5">15</p>
+									<span class="text-lg">Primary Devices</span>
 								</div>
 							</div>
 						</div>
@@ -39,16 +39,16 @@
 			</div>
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">
-					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
+				<div class="card">					
+					<a ui-sref="app.admin.device.dependent-devices">
+						<div class="noback bg-greensea">
 							<div class="row">
 								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+									<i class="fa fa-mobile fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Devices</p>
-									<span class="text-lg">35</span>
+									<p class="text-elg text-strong mt-5 mb-5">7</p>
+									<span class="text-lg">Dependent Devices</span>
 								</div>
 							</div>
 						</div>
@@ -65,8 +65,8 @@
 									<i class="fa fa-users fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Users</p>
-									<span class="text-lg">145</span>
+									<p class="text-elg text-strong mt-5 mb-5">95</p>
+									<span class="text-lg">Users</span>
 								</div>
 							</div>
 						</div>
@@ -86,62 +86,51 @@
 									<script type="text/ng-template" id="myModalContent.html">									
 										<div class="modal-header"><h4 class="modal-title custom-font">Add Admin</h4></div>
 										<div class="modal-body">											
-											<div class="overflow row">
-												<div class="col-md-6 first">
-													<div class="form-group">
-														<label for="">First Name</label>
-														<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-													</div>
+											<div class="row form-group">
+												<div class="col-md-6">
+													<label for="">First Name</label>
+													<input type="text" name="" id="" class="form-control" placeholder="">
 												</div>
-												<div class="col-md-6 last">
-													<div class="form-group">
-														<label for="">Last Name</label>
-														<input type="text" name="" id="" class="form-control mb-10" placeholder="">
+												<div class="col-md-6">
+													<label for="">Last Name</label>
+													<input type="text" name="" id="" class="form-control" placeholder="">
+												</div>
+											</div>
+											
+											<div class="form-group row">
+												<div class="col-md-6">													
+													<label for="">Email Address</label>
+													<input type="emial" name="" id="" class="form-control" placeholder="">
+												</div>
+												<div class="col-md-6">
+													<label for="">Profile Photo</label>
+													<div class="profilephoto">
+														<input ui-jq="filestyle" type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+														<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
 													</div>
 												</div>
 											</div>
 											
-											<div class="overflow row">
-												<div class="col-md-6 first">
-													<div class="form-group">
-														<label for="">Email Address</label>
-														<input type="emial" name="" id="" class="form-control mb-10" placeholder="">
-													</div>
+											<div class="form-group row">
+												<div class="col-md-6">													
+													<label for="">Phone</label>
+													<input type="text" name="" id="" class="form-control" placeholder="">
 												</div>
-												<div class="col-md-6 last">
-													<div class="form-group">
-														<label for="">Profile Photo</label>
-														<div class="profilephoto">
-															<input ui-jq="filestyle" type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
-															<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
-														</div>
-													</div>
+												<div class="col-md-6">
+													<label for="">Password</label>
+													<input type="password" name="" id="" class="form-control" placeholder="">
 												</div>
 											</div>
 											
-											<div class="overflow row">
-												<div class="col-md-6 first">
-													<div class="form-group">
-														<label for="">Phone </label>
-														<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-													</div>
+											<div class="form-group row">
+												<div class="col-md-6">
+													<label for="">Address</label>
+													<input type="text" name="" id="" class="form-control" placeholder="">
 												</div>
-												<div class="col-md-6 last">
-													<div class="form-group">
-														<label for="">Password </label>
-														<input type="password" name="" id="" class="form-control mb-10" placeholder="">
-													</div>
+												<div class="col-md-6">
+													<label for="">Zip Code</label>
+													<input type="text" name="" id="" class="form-control" placeholder="">
 												</div>
-											</div>
-											
-											<div class="form-group">
-												<label for="">Address </label>
-												<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-											</div>
-											
-											<div class="form-group">
-												<label for="">Zip Code </label>
-												<input type="text" name="" id="" class="form-control mb-10" placeholder="">
 											</div>
 											
 											<div class="form-group">
@@ -168,8 +157,8 @@
 					
 					<div class="hometabs">
 						<div class="tile-body table-custom">
-							<div class="row pos-r">
-								<div class="col-md-6 filterorder">
+							<div class="row pos-r mb-20">
+								<div class="col-md-4 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -177,11 +166,15 @@
 										<a href uib-dropdown-toggle style="border-right: 0 none; ">Order by</a>
 										<ul class="dropdown-menu with-arrow animated littleFadeInUp">
 											<li><a href="" ng-click="orderByMe('title')">Title</a></li>
-											<li><a href="" ng-click="orderByMe('role')">Roles</a></li>
+											<li><a href="" ng-click="orderByMe('group')">Group</a></li>
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-6">
+								<div class="col-md-4 search">
+									<input type="text" class="form-control" placeholder="Search by text....">
+									<button class="btn btn-default br-2-r" type="button">Search</button>
+								</div>
+								<div class="col-md-4">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
@@ -198,8 +191,8 @@
 										<input type="text" class="form-control" id="fbtitle" ng-model="title">
 									</div>
 									<div class="col-md-3">
-										<label for="fblocation" class="control-label">Search by Roles</label>
-										<input type="text" class="form-control" id="fblocation" ng-model="role">
+										<label for="fblocation" class="control-label">Search by Group</label>
+										<input type="text" class="form-control" id="fblocation" ng-model="group">
 									</div>
 								</div>
 							</div>
@@ -211,11 +204,11 @@
 							<div ng-class="class">
 								<div class="glview">
 									<md-content>			
-										<md-card ng-repeat="user in users | limitTo:7 | filter:text | filter:title | filter:role | orderBy:myOrderBy">											
+										<md-card ng-repeat="user in admin | limitTo:totalDisplayed | filter:text | filter:title | filter:group | orderBy:myOrderBy">											
 											<img ng-src="{{imagePath}}/users/{{user.imagename}}.jpg" class="md-card-image" alt="Washed Out">
 											<md-card-content>
 												<h2 class="md-title">{{ user.name }}</h2>
-												<p>{{ user.role }}</p>
+												<p>{{ user.access }}</p>
 												<p>{{ user.phone }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
