--- a/views/tmpl/admin/permissions/roles.html
+++ b/views/tmpl/admin/permissions/roles.html
@@ -22,15 +22,15 @@
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
-					<a ui-sref="app.admin.facility.facility">
-						<div class="noback bg-greensea">
+					<a ui-sref="app.admin.device.devices">
+						<div class="noback bg-blue">						
 							<div class="row">
 								<div class="col-xs-4 ta-c">
-									<i class="fa fa-map-marker fa-5x"></i>
+									<i class="fa fa-fax fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Facility</p>
-									<span class="text-lg">2</span>
+									<p class="text-elg text-strong mt-5 mb-5">15</p>
+									<span class="text-lg">Primary Devices</span>
 								</div>
 							</div>
 						</div>
@@ -39,16 +39,16 @@
 			</div>
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">
-					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
+				<div class="card">					
+					<a ui-sref="app.admin.device.dependent-devices">
+						<div class="noback bg-greensea">
 							<div class="row">
 								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+									<i class="fa fa-mobile fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Devices</p>
-									<span class="text-lg">35</span>
+									<p class="text-elg text-strong mt-5 mb-5">7</p>
+									<span class="text-lg">Dependent Devices</span>
 								</div>
 							</div>
 						</div>
@@ -65,8 +65,8 @@
 									<i class="fa fa-users fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Users</p>
-									<span class="text-lg">145</span>
+									<p class="text-elg text-strong mt-5 mb-5">95</p>
+									<span class="text-lg">Users</span>
 								</div>
 							</div>
 						</div>
@@ -99,29 +99,28 @@
 													<textarea name="" id="" class="form-control mb-10" placeholder=""></textarea>
 												</div>
 												
-												<div class="row form-group">
-													<div class="col-md-5">
+												<div class="row" ng-controller="AccessbtnCtrl">
+													<div class="form-group col-md-5">
 														<label for="">Status</label><br/>
 														<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
 															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
 															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
 														</div>
 													</div>
-													<div class="col-md-7">
+													<div class="form-group col-md-7">
 														<label for="">Access</label><br/>
-														<div class="btn-group btnrounded" ng-controller="AccessbtnCtrl">
+														<div class="btn-group btnrounded">
 															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Full'">Full Access</label>
 															<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Restricted'">Restricted Access</label>
 														</div>
 													</div>
-												</div>
-												
-												<div class="form-group">												
-													<select Multiple chosen="{width: '100%'}">
-														<option value="users">Users</option>
-														<option value="tenants">Tenants</option>
-														<option value="devices">Devices</option>
-													</select>
+													<div class="form-group col-md-12" ng-hide="radioModel=='Full'">
+														<select Multiple chosen="{width: '100%'}">
+															<option value="users">Users</option>
+															<option value="tenants">Tenants</option>
+															<option value="devices">Devices</option>
+														</select>
+													</div>
 												</div>
 																													
 											</div>
@@ -139,8 +138,8 @@
 					
 					<div class="hometabs">
 						<div class="tile-body table-custom">
-							<div class="row pos-r">
-								<div class="col-md-6 filterorder">
+							<div class="row pos-r mb-20">
+								<div class="col-md-4 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -152,7 +151,11 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-6">
+								<div class="col-md-4 search">
+									<input type="text" class="form-control" placeholder="Search by text....">
+									<button class="btn btn-default br-2-r" type="button">Search</button>
+								</div>
+								<div class="col-md-4">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
@@ -182,7 +185,7 @@
 							<div ng-class="class">
 								<div class="glview">
 									<md-content>			
-										<md-card ng-repeat="role in roles | limitTo:totalDisplayed | filter:text | filter:title | filter:status | orderBy:myOrderBy">											
+										<md-card ng-repeat="role in aroles | limitTo:totalDisplayed | filter:text | filter:title | filter:status | orderBy:myOrderBy">											
 											<md-card-content>
 												<h2 class="md-title">{{ role.title }}</h2>
 												<p>{{ role.status }}</p>
