--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -22,15 +22,15 @@
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
-					<a ui-sref="app.admin.facility.facility">
-						<div class="noback bg-greensea">
+					<a ui-sref="app.admin.device.devices">
+						<div class="noback bg-blue">						
 							<div class="row">
 								<div class="col-xs-4 ta-c">
-									<i class="fa fa-map-marker fa-5x"></i>
+									<i class="fa fa-fax fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Facility</p>
-									<span class="text-lg">2</span>
+									<p class="text-elg text-strong mt-5 mb-5">15</p>
+									<span class="text-lg">Primary Devices</span>
 								</div>
 							</div>
 						</div>
@@ -39,16 +39,16 @@
 			</div>
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">
-					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
+				<div class="card">					
+					<a ui-sref="app.admin.device.dependent-devices">
+						<div class="noback bg-greensea">
 							<div class="row">
 								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+									<i class="fa fa-mobile fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Devices</p>
-									<span class="text-lg">35</span>
+									<p class="text-elg text-strong mt-5 mb-5">7</p>
+									<span class="text-lg">Dependent Devices</span>
 								</div>
 							</div>
 						</div>
@@ -65,8 +65,8 @@
 									<i class="fa fa-users fa-5x"></i>
 								</div>
 								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Users</p>
-									<span class="text-lg">145</span>
+									<p class="text-elg text-strong mt-5 mb-5">95</p>
+									<span class="text-lg">Users</span>
 								</div>
 							</div>
 						</div>
@@ -101,15 +101,7 @@
 														<input ui-jq="filestyle" type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
 														<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
 													</div>
-												</div>
-												
-												<div class="form-group">
-													<label for="">Facility</label><br/>
-													<select chosen="{width: '100%'}">
-														<option value="WS">USA Corporate Services</option>
-														<option value="RP">Aerzen USA Corporate</option>
-													</select>
-												</div>																	
+												</div>																
 											</div>
 											<div class="modal-footer">
 												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
@@ -125,8 +117,8 @@
 						
 					<div class="hometabs">
 						<div class="tile-body table-custom">
-							<div class="row pos-r mb-10">
-								<div class="col-md-6 filterorder">
+							<div class="row pos-r mb-20">
+								<div class="col-md-9 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -138,6 +130,10 @@
 											<li><a href="" ng-click="orderByMe('noofusers')">Users</a></li>
 										</ul>
 									</label>
+								</div>
+								<div class="col-md-3 search">
+									<input type="text" class="form-control" placeholder="Search by text....">
+									<button class="btn btn-default br-2-r" type="button">Search</button>
 								</div>
 								<div class="filterfields" ng-hide="filtershow">
 									<div class="col-md-3">
@@ -153,7 +149,7 @@
 										<input type="text" class="form-control" id="fblocation" ng-model="facility">
 									</div>
 								</div>
-							</div>
+							</div>							
 							<div ng-if="result">									
 								<div layout="row" ng-class="statusclass">									
 									{{result}}
@@ -187,15 +183,7 @@
 																		<input ui-jq="filestyle" type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
 																		<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
 																	</div>
-																</div>
-																
-																<div class="form-group">
-																	<label for="">Facility</label><br/>
-																	<select chosen="{width: '100%'}">
-																		<option value="WS">USA Corporate Services</option>
-																		<option value="RP">Aerzen USA Corporate</option>
-																	</select>
-																</div>																	
+																</div>																
 															</div>
 															<div class="modal-footer">
 																<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
@@ -209,7 +197,6 @@
 											</div>
 										</md-card>										
 									</md-content>
-									<!--button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button-->
 								</div>
 							</div>
 						</div>
