--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -138,7 +138,7 @@
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
 												<p><label>Name</label> Arnold</p>
-												<p><label>Phone</label> +1 212 1467 8920</p>
+												<p><label>Phone</label> +1 212 1467 1212</p>
 												<p><label>E-mail</label> arnold@gmail.com</p>
 												<p><label>Address</label> 558 Margaret Street, LOS ANGELES, CA-90001, USA</p> 
 												<p><label>Country</label> USA</p>
@@ -198,56 +198,17 @@
 														<thead>
 															<tr>
 																<th>Group Name</th>
-																<th>Facility</th>
 															</tr>
 														</thead>
 														<tbody>
 															<tr>
 																<td>24x7</td>
-																<td>USA Corporate Services</td>
 															</tr>
 															<tr>
 																<td>Office Hrs</td>
-																<td>Aerzen USA Corporation</td>
 															</tr>
 															<tr>
 																<td>Housekeeping Hrs</td>
-																<td>USA Corporate Services</td>
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</div>
-										</div>
-										
-										<div class="row mt-40">
-											<div class="form-group col-md-12 legend">
-												<h4><strong>Schedule</strong> Groups</h4>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="form-group col-md-12">													
-												<div class="tile-body p-0">
-													<table class="table table-bordered">
-														<thead>
-															<tr>
-																<th>Schedule Name</th>
-																<th>Facility</th>
-															</tr>
-														</thead>
-														<tbody>
-															<tr>
-																<td>Office Schedule</td>
-																<td>USA Corporate Services</td>
-															</tr>
-															<tr>
-																<td>Cleaning Schedule</td>
-																<td>Aerzen USA Corporation</td>
-															</tr>
-															<tr>
-																<td>Meeting Schedule</td>
-																<td>USA Corporate Services</td>
 															</tr>
 														</tbody>
 													</table>
@@ -270,7 +231,7 @@
 										<div class="row">
 											<div class="form-group col-sm-6">
 												<label for="first-name">First Name</label>
-												<input type="text" class="form-control" id="first-name" value="Paracosm">
+												<input type="text" class="form-control" id="first-name" value="Arnold">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="last-name">Last Name</label>
@@ -294,19 +255,13 @@
 										
 										<div class="row">
 											<div class="form-group col-sm-6">
+												<label for="first-name">Phone Number</label>
+												<input type="text" class="form-control" id="first-name" value="212 1467 1212">
+											</div>
+											<div class="form-group col-sm-6">
 												<label for="address1">Address</label>
 												<input type="text" class="form-control" id="address1" value="558 Margaret Street, LOS ANGELES, CA-90001, USA">
 											</div>
-											<div class="form-group col-sm-6">												
-												<label for="country">Country</label>
-												<select ui-jq="chosen" id="country" ui-options="{width: '100%'}">
-													<option>Slovakia</option>
-													<option>Czech Republic</option>
-													<option>Poland</option>
-													<option>Hungary</option>
-													<option>Austria</option>
-												</select>											  
-											</div>											
 										</div>
 										
 										<div class="row">
@@ -316,17 +271,17 @@
 											</div>
 										</div>
 										
-										<div class="row">										
+										<div class="row" ng-controller="ActivebtnCtrl">										
 											<div class="form-group col-sm-6">
 												<label for="">Status</label><br/>
-												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
+												<div class="btn-group btnrounded" >
 													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
 													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
 												</div>
 											</div>
-											<div class="form-group col-sm-6 editprofile">
+											<div class="form-group col-sm-6 editprofile" ng-hide="radioModel=='Inactive'">
 												<label for="">Expiration Date</label>
-												<div class="form-group" ng-controller="DatepickerDemoCtrl">
+												<div ng-controller="DatepickerDemoCtrl">
 													<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
 												</div>
 											</div>
@@ -469,7 +424,67 @@
 										<div class="row">
 											<div class="col-md-12 legend">
 												<h5 class="pull-left"><strong>Assigned Groups</strong></h5>
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right"><i class="fa fa-plus"></i> <span>Add Groups</span></button>
+												<div ng-controller="ModalDemoCtrl">
+													<script type="text/ng-template" id="myModalContent.html">
+														<div class="modal-header"><h4 class="modal-title custom-font">User Groups</h4></div>
+														<div class="hometabs">
+															<div class="overflow groupslists">
+																<div class="col-md-12">
+																	<ul>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Residence</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Residence Guest</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Office Admin</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Maintenance</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Delivery</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Housekeeping Staff</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> 24x7 Services</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Residence</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Residence Guest</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Office Admin</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Maintenance</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Delivery</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Housekeeping Staff</label>
+																		</li>
+																		<li>
+																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> 24x7 Services</label>
+																		</li>
+																	</ul>
+																	<a ui-sref="app.admin.user.user-groups" ng-click="cancel()" class="pull-right mt-15 mb-20">Create User Group</a>
+																</div>
+															</div>
+														</div>
+														<div class="modal-footer">
+															<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
+															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
+														</div>											
+													</script>
+													<button ng-click="open()" class="btn btn-default btn-rounded btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right"><i class="fa fa-plus"></i> <span>Add Groups</span></button>
+												</div>
 											</div>
 										</div>
 										
@@ -480,32 +495,25 @@
 														<thead>
 															<tr>
 																<th>Group Name</th>
-																<th>Facility</th>
-																<th>Action</th>
+																<th width="75">Action</th>
 															</tr>
 														</thead>
 														<tbody>
 															<tr>
 																<td>24x7</td>
-																<td>USA Corporate Services</td>
 																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
 																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
 																</td>
 															</tr>
 															<tr>
 																<td>Office Hrs</td>
-																<td>Aerzen USA Corporation</td>
 																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
 																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
 																</td>
 															</tr>
 															<tr>
 																<td>Housekeeping Hrs</td>
-																<td>USA Corporate Services</td>
 																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
 																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
 																</td>
 															</tr>
@@ -515,7 +523,7 @@
 											</div>
 										</div>
 										
-										<div class="row mt-20">
+										<!--div class="row mt-20">
 											<div class="form-group col-md-12 legend">
 												<h4><strong><br/>Schedule</strong> Groups</h4>												
 											</div>
@@ -567,7 +575,7 @@
 														</tbody>
 													</table>
 												</div>
-											</div>
+											</div-->
 										</div>
 										
 										<div class="row">
