--- a/views/tmpl/subadmin/dashboard.html
+++ b/views/tmpl/subadmin/dashboard.html
@@ -11,9 +11,6 @@
 									<h3 class="custom-font">{{page.title}}</h3>
 									<p>{{page.subtitle}}</p>									
 								</div>
-								<div class="tile-body p-0 realtimeloader" ng-controller="RealtimeLoadCtrl">
-									<rickshaw rickshaw-options="options1" rickshaw-features="features1" rickshaw-series="series1"></rickshaw>
-								</div>
 							</div>
 						</div>
 					</div>
@@ -29,14 +26,14 @@
 							</div>
 							<div class="col-xs-7">								
 								<p class="text-elg text-strong mt-5 mb-5">2</p>
-								<span class="text-lg">Facility</span>
+								<span class="text-lg">Facilities</span>
 							</div>
 						</div>
 					</div>
 					<div class="back bg-greensea">
 						<div class="row">         
 							<div class="col-xs-6">
-								<a ui-sref="app.subadmin.facility.facility"><i class="fa fa-map-marker fa-2x"></i> Facility</a>
+								<a ui-sref="app.subadmin.facility.facility"><i class="fa fa-map-marker fa-2x"></i> Facilities</a>
 							</div>
 							<div class="col-xs-6">
 								<a ui-sref="app.subadmin.settings"><i class="fa fa-cog fa-2x"></i> Settings</a>
@@ -159,7 +156,7 @@
 						<ul class="list-inline tbox mt-10">
 							<li class="tcol">
 								<a ui-sref="app.subadmin.support.technician">
-									<h3>Technician</h3>
+									<h3>Technicians</h3>
 									<span class="text-muted">Customer support Elika</span>
 								</a>
 							</li>
@@ -177,19 +174,13 @@
 						<ul class="list-inline tbox mt-10">
 							<li class="b-r tcol">
 								<a ui-sref="app.subadmin.schedule.schedules">
-									<h3>Schedule</h3>
-									<span class="text-muted">Management</span>
-								</a>
-							</li>
-							<li class="b-r tcol">
-								<a ui-sref="app.subadmin.schedule.schedule-groups">
-									<h3>Schedule Groups</h3>
+									<h3>Schedules</h3>
 									<span class="text-muted">Management</span>
 								</a>
 							</li>
 							<li class="tcol">
 								<a ui-sref="app.subadmin.schedule.holiday-schedule">
-									<h3>Holiday Schedule</h3>
+									<h3>Holiday Schedules</h3>
 									<span class="text-muted">Management</span>
 								</a>
 							</li>
@@ -210,7 +201,7 @@
 						<ul class="list-inline tbox mt-10">
 							<li class="tcol">
 								<a ui-sref="app.subadmin.help.message-notification">
-									<h3>Message &amp; Notification</h3>
+									<h3>Messages &amp; Notifications</h3>
 									<span class="text-muted">Meet with next door</span>
 								</a>
 							</li>
@@ -228,7 +219,7 @@
 						<ul class="list-inline tbox mt-10">
 							<li class="tcol">
 								<a ui-sref="app.subadmin.help.diagnostics-help">
-									<h3>Diagnostics and Help</h3>
+									<h3>Diagnostics and Helps</h3>
 									<span class="text-muted">Filter and solve your problem</span>
 								</a>
 							</li>
