--- a/views/tmpl/subadmin/device/devices.html
+++ b/views/tmpl/subadmin/device/devices.html
@@ -86,43 +86,92 @@
 									<script type="text/ng-template" id="myModalContent.html">
 										<form name="form1" role="form">
 											<div class="modal-header"><h4 class="modal-title custom-font">Add Configuration Device</h4></div>
-											<div class="modal-body">							
-												<div class="form-group">
-													<label for="">Device Name</label>
-													<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-												</div>
-												<div class="form-group">
-													<label for="">Serial Number</label>
-													<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-												</div>
-												<div class="form-group">
-													<label for="">Registration Code</label>
-													<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-												</div>
-												<div class="form-group">
-													<label for="">Device Type</label><br/>
-													<div class="btn-group btnrounded" ng-controller="MasterbtnCtrl">
-														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Master'">Master</label>
-														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Slave'">Dependent</label>
+											<div class="modal-body">
+												<div class="row overflow">
+													<div class="col-md-6 first">
+														<div class="form-group">
+															<label for="">Device Name</label>
+															<input type="text" name="" id="" class="form-control mb-10" placeholder="">
+														</div>
 													</div>
-													<div class="slavevalues">
+													<div class="col-md-6 last">
+														<div class="form-group">
+															<label for="">Model Name</label>
+															<input type="text" name="" id="" class="form-control mb-10" placeholder="">
+														</div>
+													</div>
+												</div>
+												<div class="row">
+													<div class="col-md-6 first">
+														<div class="form-group">
+															<label for="">Serial Number</label>
+															<input type="text" name="" id="" class="form-control mb-10" placeholder="">
+														</div>
+													</div>
+													<div class="col-md-6 last">
+														<div class="form-group">
+															<label for="">Facility</label><br/>
+															<select class="form-control">
+																<option>USA Corporate Services</option>
+																<option>Aerzen USA Corporation</option>
+															</select>
+															<small class="pull-right" style="margin-bottom:-5px;"><a ng-click="cancel()" ui-sref="app.subadmin.facility.facility">Add Facility</a></small>
+														</div>
+													</div>
+												</div>
+												<div class="form-group" ng-controller="PrimarybtnCtrl">
+													<label for="">Device Type</label><br/>
+													<div class="btn-group btnrounded">
+														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Primary'">Primary</label>
+														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Dependent'">Dependent</label>
+													</div>
+													<div class="slavevalues" ng-hide="radioModel=='Primary'">
 														<select class="form-control mb-10">
+															<option>Select Primary Device</option>
+															<option>Reception Room</option>
 															<option>Conference Room</option>
-															<option>Reception</option>
-															<option>Waiting Room</option>
+															<option>Server Room</option>
+															<option>Meeting Room</option>
+															<option>Development Room</option>
+															<option>Boardroom</option>
+															<option>Managers Room</option>
+															<option>Director Room</option>
+															<option>Inventory Room</option>
 														</select>
 													</div>
-												</div>							  
-												<div class="form-group">
-													<label for="">Technician</label><br/>
-													<select multiple chosen="{width: '100%'}">
-														<option value="WS">Will Smith</option>
-														<option value="RP">Robert Pattinson</option>
-														<option value="ZE">Zac Efron</option>
-														<option value="JD">Johny Depp</option>
-														<option value="KH">Kevin Hart</option>
-														<option value="BA">Ben Affleck</option>
-													</select>  
+												</div>
+												<div class="row">
+													<div class="col-md-6 first">
+														<div class="form-group">
+															<label for="">Technician</label><br/>
+															<select class="form-control">
+																<option>Arnold</option>
+																<option>Peter</option>
+																<option>Paracosm</option>
+																<option>Jason</option>
+																<option>Paul</option>
+																<option>Vin</option>
+																<option>Dwayne</option>
+															</select>
+															<small class="pull-right mb-10"><a ng-click="cancel()" ui-sref="app.subadmin.support.technician">Add Technician</a></small>
+														</div>
+													</div>
+													<div class="col-md-6 last">
+														<div class="form-group">
+															<label for="">Doors</label><br/>
+															<select class="form-control">
+																<option>Main Gate Front</option>
+																<option>Main Gate Back</option>
+																<option>Exit Gate Front</option>
+																<option>Exit Gate Back</option>
+																<option>Parking Entry Gate</option>
+																<option>Parking Exit Gate</option>
+																<option>Pool Gate</option>
+																<option>Gym Gate</option>
+															</select>
+															<small class="pull-right mb-10"><a ng-click="cancel()" ui-sref="app.subadmin.door.doors">Add Door</a></small>
+														</div>
+													</div>
 												</div>
 											</div>
 											<div class="modal-footer">
@@ -139,8 +188,8 @@
 					
 					<div class="hometabs">
 						<div class="tile-body table-custom">
-							<div class="row pos-r">
-								<div class="col-md-6 filterorder">
+							<div class="row pos-r mb-20">
+								<div class="col-md-4 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -153,7 +202,11 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-6">
+								<div class="col-md-4 search">
+									<input type="text" class="form-control" placeholder="Search by text....">
+									<button class="btn btn-default br-2-r" type="button">Search</button>
+								</div>
+								<div class="col-md-4">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
@@ -189,7 +242,7 @@
 											<md-card-content>
 												<h2 class="md-title">{{ device.title }}</h2>
 												<p>{{ device.model }}</p>
-												<p>{{ device.noofslaves }} Dependent &nbsp;|&nbsp; {{ device.noofuser }} Users</p>
+												<p>{{ device.noofslaves }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.subadmin.device.device-details">View</a>
