--- a/views/tmpl/subadmin/facility/facility.html
+++ b/views/tmpl/subadmin/facility/facility.html
@@ -87,39 +87,62 @@
 										<form name="form1" role="form">
 											<div class="modal-header"><h4 class="modal-title custom-font">Add Facility</h4></div>
 											<div class="modal-body">
-												<div class="form-group">
-													<label for="">Facility Name</label>
-													<input type="text" name="" id="" class="form-control mb-10" placeholder="">
+												<div class="row overflow">
+													<div class="col-md-6">
+														<div class="form-group">
+															<label for="">Facility Name</label>
+															<input type="text" name="" id="" class="form-control mb-10" placeholder="">
+														</div>
+													</div>
+													<div class="col-md-6">
+														<div class="form-group">
+															<label for="">Profile Photo</label>
+															<div class="profilephoto">
+																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+																<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
+															</div>
+														</div>
+													</div>
 												</div>
 												<div class="form-group">
 													<label for="">Facility Location</label>
 													<input type="text" name="" id="" class="form-control mb-10" placeholder="">
 												</div>
-												<div class="form-group">
-													<label for="">Time Zone</label>
-													<select class="form-control mb-10">
-														<option>USA (Alaska )</option>
-														<option>USA (Samoa)</option>
-														<option>USA (Pacific)</option>
-														<option>USA (Eastern)</option>
-														<option>USA (Hawaii-Aleutian)</option>
-														<option>USA (Mountain)</option>
-														<option>USA (Atlantic)</option>
-														<option>USA (Central)</option>
-														<option>USA (Chamorro)</option>
-													</select>
-												</div>
-												<div class="form-group">
-													<label for="">Zip Code</label>
-													<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-												</div>
-												<div class="form-group">
-													<label for="">Status</label><br/>
-													<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-														<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+												<div class="row">
+													<div class="col-md-6">
+														<div class="form-group">
+															<label for="">Time Zone</label>
+															<select class="form-control mb-10">
+																<option>USA (Alaska )</option>
+																<option>USA (Samoa)</option>
+																<option>USA (Pacific)</option>
+																<option>USA (Eastern)</option>
+																<option>USA (Hawaii-Aleutian)</option>
+																<option>USA (Mountain)</option>
+																<option>USA (Atlantic)</option>
+																<option>USA (Central)</option>
+																<option>USA (Chamorro)</option>
+															</select>
+														</div>
 													</div>
-												</div>												
+													<div class="col-md-6">
+														<div class="form-group">
+															<label for="">Zip Code</label>
+															<input type="text" name="" id="" class="form-control mb-10" placeholder="">
+														</div>
+													</div>
+												</div>
+												<div class="row">
+													<div class="col-md-6">
+														<div class="form-group">
+															<label for="">Status</label><br/>
+															<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
+																<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
+																<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+															</div>
+														</div>
+													</div>
+												</div>											
 											</div>
 											<div class="modal-footer">
 												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
@@ -135,8 +158,8 @@
 					
 					<div class="hometabs">
 						<div class="tile-body table-custom">
-							<div class="row pos-r">
-								<div class="col-md-6 filterorder">
+							<div class="row pos-r mb-20">
+								<div class="col-md-4 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -148,7 +171,11 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-6">
+								<div class="col-md-4 search">
+									<input type="text" class="form-control" placeholder="Search by text....">
+									<button class="btn btn-default" type="button">Search</button>
+								</div>
+								<div class="col-md-4">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label> 
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
@@ -186,7 +213,7 @@
 												<p>{{ facility.noofdevices }} Devices &nbsp;|&nbsp; {{ facility.noofuser }} Users</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.subadmin.facility.facility-details">View</a>
+												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.dashboard">View</a>
 												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.subadmin.facility.facility-details">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
 											</div>
