--- a/views/tmpl/subadmin/user/user-profile.html
+++ b/views/tmpl/subadmin/user/user-profile.html
@@ -218,42 +218,7 @@
 													</table>
 												</div>
 											</div>
-										</div>
-										
-										<div class="row mt-40">
-											<div class="form-group col-md-12 legend">
-												<h4><strong>Schedule</strong> Groups</h4>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="form-group col-md-12">													
-												<div class="tile-body p-0">
-													<table class="table table-bordered">
-														<thead>
-															<tr>
-																<th>Schedule Name</th>
-																<th>Facility</th>
-															</tr>
-														</thead>
-														<tbody>
-															<tr>
-																<td>Office Schedule</td>
-																<td>USA Corporate Services</td>
-															</tr>
-															<tr>
-																<td>Cleaning Schedule</td>
-																<td>Aerzen USA Corporation</td>
-															</tr>
-															<tr>
-																<td>Meeting Schedule</td>
-																<td>USA Corporate Services</td>
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</div>
-										</div>										
+										</div>								
 									</div>
 								</div>
 							</uib-tab>
@@ -270,7 +235,7 @@
 										<div class="row">
 											<div class="form-group col-sm-6">
 												<label for="first-name">First Name</label>
-												<input type="text" class="form-control" id="first-name" value="Paracosm">
+												<input type="text" class="form-control" id="first-name" value="Arnold">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="last-name">Last Name</label>
@@ -281,32 +246,40 @@
 										<div class="row">										
 											<div class="form-group col-sm-6">
 												<label for="email">E-mail</label>
-												<input type="email" class="form-control" id="email" value="pcosm1245@gmail.com" readonly>
+												<input type="email" class="form-control" id="email" value="arnold@gmail.com" readonly>
 											</div>
 											<div class="form-group col-sm-6 editprofile">
 												<label for="profile">Profile Photo</label>
 												<div class="profilephoto">
-													<input ui-jq="filestyle" type="file" class="filestyle profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+													<input type="file" class="filestyle profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
 													<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
 												</div>
 											</div>
 										</div>
 										
+										<div class="row" ng-controller="ActivebtnCtrl">
+											<div class="form-group col-sm-6">												
+												<label for="">Status</label><br/>
+												<div class="btn-group btnrounded">
+													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
+													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+												</div>													
+											</div>
+											<div class="form-group col-sm-6">					
+												<div ng-hide="radioModel=='Inactive'">
+													<label for="">Expiration Date</label>
+													<div ng-controller="DatepickerDemoCtrl">
+														<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
+													</div>
+												</div>
+											</div>											
+										</div>
+										
 										<div class="row">
-											<div class="form-group col-sm-6">
+											<div class="form-group col-sm-12">
 												<label for="address1">Address</label>
 												<input type="text" class="form-control" id="address1" value="558 Margaret Street, LOS ANGELES, CA-90001, USA">
 											</div>
-											<div class="form-group col-sm-6">												
-												<label for="country">Country</label>
-												<select ui-jq="chosen" id="country" ui-options="{width: '100%'}">
-													<option>Slovakia</option>
-													<option>Czech Republic</option>
-													<option>Poland</option>
-													<option>Hungary</option>
-													<option>Austria</option>
-												</select>											  
-											</div>											
 										</div>
 										
 										<div class="row">
@@ -318,17 +291,10 @@
 										
 										<div class="row">										
 											<div class="form-group col-sm-6">
-												<label for="">Status</label><br/>
-												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
-												</div>
+												
 											</div>
 											<div class="form-group col-sm-6 editprofile">
-												<label for="">Expiration Date</label>
-												<div class="form-group" ng-controller="DatepickerDemoCtrl">
-													<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
-												</div>
+												
 											</div>
 										</div>
 										
@@ -514,62 +480,6 @@
 												</div>
 											</div>
 										</div>
-										
-										<div class="row mt-20">
-											<div class="form-group col-md-12 legend">
-												<h4><strong><br/>Schedule</strong> Groups</h4>												
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="col-md-12 legend">
-												<h5 class="pull-left"><strong>Assigned Schedule Groups</strong></h5>
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right"><i class="fa fa-plus"></i> <span>Add Groups</span></button>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="form-group col-md-12">													
-												<div class="tile-body p-0">
-													<table class="table table-bordered">
-														<thead>
-															<tr>
-																<th>Schedule Name</th>
-																<th>Facility</th>
-																<th>Action</th>
-															</tr>
-														</thead>
-														<tbody>
-															<tr>
-																<td>Office Schedule</td>
-																<td>USA Corporate Services</td>
-																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
-															<tr>
-																<td>Cleaning Schedule</td>
-																<td>Aerzen USA Corporation</td>
-																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
-															<tr>
-																<td>Meeting Schedule</td>
-																<td>USA Corporate Services</td>
-																<td>
-																	<button type="button" class="btn btn-success btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-edit"></i> <span>Edit</span></button>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</div>
-										</div>
-										
 										<div class="row">
 											<div class="form-group col-md-12 legend mt-20">
 												<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</button>
